--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -39,7 +39,7 @@
   "value": "Montant",
   "earn": "Revenu",
   "spent": "Dépense",
-  "welcome": "Bienvenue, {username}",
+  "welcome": "Bienvenue, ",
   "moves": "Mouvements",
   "percentageExpenses": "Pourcentage des dépenses",
   "selectedMonth": "Mois sélectionné"
